--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/Index.cshtml
@@ -218,7 +218,7 @@
                                 <select id="caseSolFilterApplication" data-field="region" data-placeholder="@Translation.GetCoreTextTranslation("Välj en eller flera")" multiple="multiple" class="chosen-select">
                                     @foreach (var e in Model.CaseSolutionApplication)
                                     {
-                                        <option value="@e.Id">@e.Name</option>
+                                        <option value="@e.Value">@e.Name</option>
                                     }
                                 </select>
                             </td>
