--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/Index.cshtml
@@ -29,8 +29,12 @@
             </li>
         }
     </ul>
-
     <div class="content tab-content">
+        <div class="loading-msg" id="progress" style="display: none">
+            <div class="content-wrapper">
+                <div class="loader">@Translation.Get("Laddar...")</div>
+            </div>
+        </div>
         @if (Model.CasePreview != null)
         {
             <div id="fragment-1" class="tab-pane active">
@@ -47,7 +51,7 @@
                             <div class="alert alert-success">@Html.Raw(Model.CaseRegistrationMessage.SetHtmlParameters())</div>
                         }
                     }
-                    
+
                     @Html.Partial("_CaseReceipt", Model)
 
                 </div>
@@ -55,7 +59,7 @@
 
             if (Model.AttachmentPlacement == 1 && Model.FieldSettings.Select(f => f.Name).Contains(GlobalEnums.TranslationCaseFields.Filename.ToString()))
             {
-                <div id="attachment-tab" class="tab-pane" style="overflow:hidden;">
+                <div id="attachment-tab" class="tab-pane" style="overflow: hidden;">
                     <div class="container-fluid dh-container">
                         <table id="case_files_table" class="table table-striped">
                             @if (Model.CasePreview.CaseFiles != null)
@@ -64,7 +68,7 @@
                                 {
                                     <tr>
                                         <td>
-                                            <a style="color:blue" href="@Url.Action("DownloadFile", new RouteValueDictionary { { "id", Model.CasePreview.Id }, { "fileName", file.FileName } })"><i class="icon-file"></i>@file.FileName</a>
+                                            <a style="color: blue" href="@Url.Action("DownloadFile", new RouteValueDictionary {{"id", Model.CasePreview.Id}, {"fileName", file.FileName}})"><i class="icon-file"></i>@file.FileName</a>
                                         </td>
                                     </tr>
                                 }
@@ -90,10 +94,9 @@
 
         //required for worflow steps
         var workflowsBehaviorParams = {
-            canSave: false,
             caseId: @Model.CaseId,
             templateId: 0,
-            customerId: @Model.CustomerId,
+            isExtendedCase: false,
             getWorkFlowStepsUrl: '@Url.Action("GetWorkflowSteps", "Case")',
             selectStepText: '@Translation.GetForJS(DH.Helpdesk.Common.Constants.Text.SelectStep)',
             saveText: '@Translation.Get("Save")'
@@ -106,36 +109,46 @@
 
         $(function() {
             var self = this;
-            
-            var $selectListStep = $('select[name="steps"]').first(); 
 
+            var $progress = $('#progress');
+            var $selectListStep = $('select[name="steps"]').first();
+            var $goBtn = $('.go-button');
             //init workflow behavior
             self.workflowStepsBehavior = new WorkflowStepsBehavior(null);
             self.workflowStepsBehavior.init(workflowsBehaviorParams);
 
             //Save with workflow
-            $('.go-button').on('click', function(e) {
+            $goBtn.on('click', function(e) {
                 e.preventDefault();
                 
-                var templateId = parseInt($selectListStep.first().val()) || 0;
-                
-                var data = {
-                    caseId: @Model.CaseId,
-                    templateId: templateId
-                };
+                var templateId = parseInt($selectListStep.first().val());
 
-                $.post(params.applyWorkflow, $.param(data), function(res) {
-                    if (res.success === true) {
-                        window.location.reload(true);
-                    } else {
+                if (!isNaN(templateId) && templateId > 0) {
+                    var data = {
+                        caseId: @Model.CaseId,
+                        templateId: templateId
+                    };
+                    
+                    $progress.show();
+
+                    $.post(params.applyWorkflow, $.param(data), function(res) {
+                        if (res.success === true) {
+                            $goBtn.prop('disabled', true);
+                            window.location.reload(true);
+                        } else {
+                            var errMsg = err.Error || 'Operation failed.';
+                            ShowToastMessage(errMsg, "Error");
+                        }
+                    }).fail(function(xhr, status, err) {
                         var errMsg = err.Error || 'Operation failed.';
                         ShowToastMessage(errMsg, "Error");
-                    }
-                }).fail(function(err) {
-                    var errMsg = err.Error || 'Operation failed.';
-                    ShowToastMessage(errMsg, "Error");
-                    console.error(err);
-                });
+                        console.error(errMsg);
+                    }).done(function() {
+                        $progress.hide();
+                    });
+                }
+
+                return false;
             });
 
         });
