#69275 Incorrect icon for Resolution rate

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_Input.cshtml
@@ -2840,7 +2840,7 @@
             </tr>
             <tr>
                 <td>
-                    <i class="dh-icon-textfield" rel="tooltip" title="@Translation.GetCoreTextTranslation("Textfält")"></i>
+                    <i class="dh-icon-select" rel="tooltip" title="@Translation.GetCoreTextTranslation("Vallista - dropdown")"></i>
                 </td>
                 <td>
                     @Translation.GetCoreTextTranslation(FieldSettingsUiNames.Names[GlobalEnums.TranslationCaseFields.SolutionRate.ToString()])
